--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,9 +1,2 @@
-name = "SupplyChainModeling"
-uuid = "8a0b78ce-42db-494b-a45c-80b287de1a3d"
-authors = ["SupplyChef <47842426+SupplyChef@users.noreply.github.com>"]
-version = "0.1.0"
-
 [deps]
-
-[compat]
-julia = "1.8"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
